# metamodelTrainer

./: .gitignore  README.md  TO-DO LIST.txt  pyproject.toml
data/efi_cp_0if1l1gv/: 12_torsion_cyc_l1_c3.csv  15_torsion_cyc_l2_c2.csv  5_interm_mode2.csv  7_comp_ten_rel_l1.5.csv  parameter_file.prm
data/efi_cp_1bxge2tu/: 11_torsion_cyc_l1_c2.csv  8_comp_ten_rel_l2.csv  9_interm_mode3.csv  efi_caezmbmj.prm
data/efi_cp_278tzd8i/: 4_comp_ten_cyc_c3.csv  7_comp_ten_rel_l1.5.csv  parameter_file.json
data/efi_cp_2r__8bpv/: 15_torsion_cyc_l2_c2.csv  4_comp_ten_cyc_c3.csv  parameter_file.prm
data/efi_cp_454mj2sc/: 1_interm_mode1.csv  3_comp_ten_cyc_c2.csv  4_comp_ten_cyc_c3.csv  9_interm_mode3.csv
data/efi_cp_69yu38rt/: 11_torsion_cyc_l1_c2.csv  13_interm_mode4.csv  14_torsion_cyc_l2_c1.csv  4_comp_ten_cyc_c3.csv  7_comp_ten_rel_l1.5.csv  9_interm_mode3.csv  efi_u33npp9j.prm  parameter_file.prm
data/efi_cp_6jk6s90x/: 11_torsion_cyc_l1_c2.csv  14_torsion_cyc_l2_c1.csv  2_comp_ten_cyc_c1.csv  parameter_file.json
data/efi_cp__xc20tkd/: 1_interm_mode1.csv  (+3 more)
metamodeltrainer/: __init__.py  build_example copy.py  build_example.py  build_example_force_active.py  build_example_force_random.py  build_example_persistent.py  build_example_persistent_force_random copy.py  build_example_random.py  build_example_random_persistent.py  continue_train_active.py  continue_train_force_active.py  continue_train_force_random.py  continue_train_random.py  explore_param_space.py  file_process.py  generate_validation.py  models.py  plot_learning_curves.py  run_example.py  run_simulation.py  test_label.py  train_active.py  train_active_force.py  train_random.py  train_random_force.py  utility.py
models/: Multi.txt  model_177daebb.txt  model_23f47a77.txt  model_44a87324.txt  model_5f10e55d.txt  model_e62af445.txt
src/: MegaModels.py  analyze.py  build.py  convert.py  explore_param_space.py  file_process.py  finalize.py  initial_comp.py  main.py  main_bis.py  models.py  old_explore_param_space.py  old_models.py  run_example.py  run_simulation.py  test.py
(+8455 files in other folders)
