[build-system]
requires = ["hatchling","hatch-build-scripts"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metamodeltrainer"]
artifacts = ["git_version.txt"]


[tool.hatch.metadata]
allow-direct-references = true

[[tool.hatch.build.hooks.build-scripts.scripts]]
out_dir="."
commands = [
    "git describe --all --long > src/metamodeltrainer/git_version.txt",
]
artifacts = []

[project]
name = "metamodeltrainer"
version = "1.0.0"
authors = [
  { name="Jan Hinrichsen", email="j.hinrichsen95@gmail.com" },
]
description = "Routines to train feed forward or recurrent nerual network on simulation in and outputs as a surrogate model"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
  "vlab_utilities @ git+ssh://git@github.com/BRAINIACS-Group/vlab_utilities.git@heads/develop-0-gae8cbba",
  "numpy==1.26.4",
  "pandas==2.0.1",
  "scipy==1.11.2",
  "tensorflow==2.15.0",
  "matplotlib",
  "sympy",
]