[build-system]
requires = ["hatchling","hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metamodeltrainer"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/metamodeltrainer/_version.py"

[project]
name = "metamodeltrainer"
dynamic = ["version"]
authors = [
  { name="Jan Hinrichsen", email="j.hinrichsen95@gmail.com" },
]
readme = "README.md"
description = "Routines to train feed forward or recurrent nerual network on simulation in and outputs as a surrogate model"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
  "vlab_utilities @ git+ssh://git@github.com/BRAINIACS-Group/vlab_utilities.git@8ae21a0d7d38ef277559c6d3a229350fe27777be",
  "numpy",
  "pandas",
  "scipy",
  "tensorflow",
  "matplotlib",
  "sympy",
]
